initial commint
