# app/Modules/openAi/routes.php
@@ -4,4 +4,5 @@ use App\Modules\openAi\controllers\OpenAIController;
 use Illuminate\Support\Facades\Route;
 
 
-Route::post('/get-gpt-advice', [OpenAiController::class, 'gptAdvice']);
+Route::post('/get-gpt-advice-by-image', [OpenAiController::class, 'gptAdviceFromImage']);
+Route::post('/get-gpt-advice-by-text', [OpenAiController::class, 'gptAdviceFromText']);
